Convert NP array to PIL Image

--- a/src/data_loader.ipynb
+++ b/src/data_loader.ipynb
@@ -2,10 +2,57 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "db099f66",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pandas in /Users/young-rae-kim/opt/anaconda3/lib/python3.9/site-packages (1.4.2)\n",
+      "Requirement already satisfied: numpy>=1.18.5 in /Users/young-rae-kim/opt/anaconda3/lib/python3.9/site-packages (from pandas) (1.21.6)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /Users/young-rae-kim/opt/anaconda3/lib/python3.9/site-packages (from pandas) (2021.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in /Users/young-rae-kim/opt/anaconda3/lib/python3.9/site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/young-rae-kim/opt/anaconda3/lib/python3.9/site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
+      "Requirement already satisfied: sklearn in /Users/young-rae-kim/opt/anaconda3/lib/python3.9/site-packages (0.0)\n",
+      "Requirement already satisfied: scikit-learn in /Users/young-rae-kim/opt/anaconda3/lib/python3.9/site-packages (from sklearn) (1.0.2)\n",
+      "Requirement already satisfied: scipy>=1.1.0 in /Users/young-rae-kim/opt/anaconda3/lib/python3.9/site-packages (from scikit-learn->sklearn) (1.8.0)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in /Users/young-rae-kim/opt/anaconda3/lib/python3.9/site-packages (from scikit-learn->sklearn) (3.1.0)\n",
+      "Requirement already satisfied: numpy>=1.14.6 in /Users/young-rae-kim/opt/anaconda3/lib/python3.9/site-packages (from scikit-learn->sklearn) (1.21.6)\n",
+      "Requirement already satisfied: joblib>=0.11 in /Users/young-rae-kim/opt/anaconda3/lib/python3.9/site-packages (from scikit-learn->sklearn) (1.1.0)\n",
+      "Requirement already satisfied: albumentations in /Users/young-rae-kim/opt/anaconda3/lib/python3.9/site-packages (1.1.0)\n",
+      "Requirement already satisfied: numpy>=1.11.1 in /Users/young-rae-kim/opt/anaconda3/lib/python3.9/site-packages (from albumentations) (1.21.6)\n",
+      "Requirement already satisfied: scikit-image>=0.16.1 in /Users/young-rae-kim/opt/anaconda3/lib/python3.9/site-packages (from albumentations) (0.19.2)\n",
+      "Requirement already satisfied: opencv-python-headless>=4.1.1 in /Users/young-rae-kim/opt/anaconda3/lib/python3.9/site-packages (from albumentations) (4.5.5.64)\n",
+      "Requirement already satisfied: scipy in /Users/young-rae-kim/opt/anaconda3/lib/python3.9/site-packages (from albumentations) (1.8.0)\n",
+      "Requirement already satisfied: PyYAML in /Users/young-rae-kim/opt/anaconda3/lib/python3.9/site-packages (from albumentations) (6.0)\n",
+      "Requirement already satisfied: qudida>=0.0.4 in /Users/young-rae-kim/opt/anaconda3/lib/python3.9/site-packages (from albumentations) (0.0.4)\n",
+      "Requirement already satisfied: scikit-learn>=0.19.1 in /Users/young-rae-kim/opt/anaconda3/lib/python3.9/site-packages (from qudida>=0.0.4->albumentations) (1.0.2)\n",
+      "Requirement already satisfied: typing-extensions in /Users/young-rae-kim/opt/anaconda3/lib/python3.9/site-packages (from qudida>=0.0.4->albumentations) (4.1.1)\n",
+      "Requirement already satisfied: PyWavelets>=1.1.1 in /Users/young-rae-kim/opt/anaconda3/lib/python3.9/site-packages (from scikit-image>=0.16.1->albumentations) (1.3.0)\n",
+      "Requirement already satisfied: imageio>=2.4.1 in /Users/young-rae-kim/opt/anaconda3/lib/python3.9/site-packages (from scikit-image>=0.16.1->albumentations) (2.19.1)\n",
+      "Requirement already satisfied: networkx>=2.2 in /Users/young-rae-kim/opt/anaconda3/lib/python3.9/site-packages (from scikit-image>=0.16.1->albumentations) (2.8)\n",
+      "Requirement already satisfied: pillow!=7.1.0,!=7.1.1,!=8.3.0,>=6.1.0 in /Users/young-rae-kim/opt/anaconda3/lib/python3.9/site-packages (from scikit-image>=0.16.1->albumentations) (9.0.1)\n",
+      "Requirement already satisfied: tifffile>=2019.7.26 in /Users/young-rae-kim/opt/anaconda3/lib/python3.9/site-packages (from scikit-image>=0.16.1->albumentations) (2022.5.4)\n",
+      "Requirement already satisfied: packaging>=20.0 in /Users/young-rae-kim/opt/anaconda3/lib/python3.9/site-packages (from scikit-image>=0.16.1->albumentations) (21.3)\n",
+      "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /Users/young-rae-kim/opt/anaconda3/lib/python3.9/site-packages (from packaging>=20.0->scikit-image>=0.16.1->albumentations) (3.0.4)\n",
+      "Requirement already satisfied: joblib>=0.11 in /Users/young-rae-kim/opt/anaconda3/lib/python3.9/site-packages (from scikit-learn>=0.19.1->qudida>=0.0.4->albumentations) (1.1.0)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in /Users/young-rae-kim/opt/anaconda3/lib/python3.9/site-packages (from scikit-learn>=0.19.1->qudida>=0.0.4->albumentations) (3.1.0)\n",
+      "Requirement already satisfied: torchvision in /Users/young-rae-kim/opt/anaconda3/lib/python3.9/site-packages (0.12.0)\n",
+      "Requirement already satisfied: pillow!=8.3.*,>=5.3.0 in /Users/young-rae-kim/opt/anaconda3/lib/python3.9/site-packages (from torchvision) (9.0.1)\n",
+      "Requirement already satisfied: requests in /Users/young-rae-kim/opt/anaconda3/lib/python3.9/site-packages (from torchvision) (2.27.1)\n",
+      "Requirement already satisfied: numpy in /Users/young-rae-kim/opt/anaconda3/lib/python3.9/site-packages (from torchvision) (1.21.6)\n",
+      "Requirement already satisfied: torch==1.11.0 in /Users/young-rae-kim/opt/anaconda3/lib/python3.9/site-packages (from torchvision) (1.11.0)\n",
+      "Requirement already satisfied: typing-extensions in /Users/young-rae-kim/opt/anaconda3/lib/python3.9/site-packages (from torchvision) (4.1.1)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/young-rae-kim/opt/anaconda3/lib/python3.9/site-packages (from requests->torchvision) (2021.10.8)\n",
+      "Requirement already satisfied: charset-normalizer~=2.0.0 in /Users/young-rae-kim/opt/anaconda3/lib/python3.9/site-packages (from requests->torchvision) (2.0.4)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/young-rae-kim/opt/anaconda3/lib/python3.9/site-packages (from requests->torchvision) (3.3)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/young-rae-kim/opt/anaconda3/lib/python3.9/site-packages (from requests->torchvision) (1.26.9)\n",
+      "Requirement already satisfied: tqdm in /Users/young-rae-kim/opt/anaconda3/lib/python3.9/site-packages (4.64.0)\n"
+     ]
+    }
+   ],
    "source": [
     "# Install libraries for data_loader\n",
     "!pip install pandas\n",
@@ -17,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "307d1481",
    "metadata": {},
    "outputs": [],
@@ -36,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "88dc1606",
    "metadata": {},
    "outputs": [],
@@ -48,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "824ee728",
    "metadata": {},
    "outputs": [],
@@ -59,10 +106,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b18c7f86",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "using device: cpu\n"
+     ]
+    }
+   ],
    "source": [
     "# Datatypes and Devices (from Assignment 2)\n",
     "dtype = torch.float\n",
@@ -78,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "35cde023",
    "metadata": {},
    "outputs": [],
@@ -94,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "f4ff2cfc",
    "metadata": {},
    "outputs": [],
@@ -107,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "0e3a6493",
    "metadata": {},
    "outputs": [],
@@ -131,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "d2b45549",
    "metadata": {},
    "outputs": [],
@@ -154,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "01d909d3",
    "metadata": {},
    "outputs": [],
@@ -174,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "1c3880f2",
    "metadata": {},
    "outputs": [],
@@ -190,25 +245,25 @@
     "        # Transforms for each train and validation\n",
     "        self.train_transform = TT.Compose([\n",
     "            TT.Resize([128, 281]),\n",
-    "            TT.HorizontalFlip(p=0.5),\n",
-    "            TT.VerticalFlip(p=0.5),\n",
+    "            TT.RandomHorizontalFlip(p=0.5),\n",
+    "            TT.RandomVerticalFlip(p=0.5),\n",
     "#             T_transforms.ImageCompression(p=0.5, \n",
     "#                 compression_type=T_transforms.ImageCompression.ImageCompressionType.JPEG),\n",
     "#             T_transforms.ImageCompression(p=0.5, \n",
     "#                 compression_type=T_transforms.ImageCompression.ImageCompressionType.WEBP),\n",
+    "            TT.ToTensor(),\n",
     "            TT.Normalize(\n",
     "                mean=[0.485, 0.456, 0.406],\n",
     "                std=[0.229, 0.224, 0.225],\n",
     "            ),\n",
-    "            TT.ToTensor(),\n",
     "        ])\n",
     "        self.val_transform = TT.Compose([\n",
     "            TT.Resize([128, 281]),\n",
+    "            TT.ToTensor(),\n",
     "            TT.Normalize(\n",
     "                mean=[0.485, 0.456, 0.406],\n",
     "                std=[0.229, 0.224, 0.225],\n",
     "            ),\n",
-    "            TT.ToTensor(),\n",
     "        ])\n",
     "    \n",
     "    def __getitem__(self, idx):\n",
@@ -221,11 +276,9 @@
     "        \n",
     "        # Apply transform\n",
     "        if self.process == 'train':\n",
-    "            transformed = self.train_transform(image=source)\n",
-    "            source = transformed['image'].to(device)\n",
+    "            source = self.train_transform(Image.fromarray(source))\n",
     "        elif self.process == 'valid':\n",
-    "            transformed = self.val_transform(image=source)\n",
-    "            source = transformed['image'].to(device)\n",
+    "            ource = self.val_transform(Image.fromarray(source))\n",
     "        \n",
     "        return source, torch.tensor(self.labels[idx], dtype=ltype).to(device)\n",
     "    \n",
@@ -235,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "c650ce0c",
    "metadata": {},
    "outputs": [],
@@ -274,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "96067f6d",
    "metadata": {},
    "outputs": [],
@@ -303,10 +356,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "cf08a704",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████| 144/144 [00:04<00:00, 29.05it/s]\n",
+      "100%|███████████████████████████████████████████| 49/49 [00:01<00:00, 31.81it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "nocall(ff1010_dataframe, 0, 1)"
    ]
