Implement dataloader and train, facing CUDA OOM errors

--- a/src/nocall_detector.ipynb
+++ b/src/nocall_detector.ipynb
@@ -8645,6 +8645,16 @@
     "print('Log Loss score:\\t%.2f' % (test_scores[1]))\n",
     "print('Fbeta-score (beta=1.0): \\t%.2f' % (test_scores[2]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2410ab40",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(cur_model.state_dict(), './nocall_detector.pt')"
+   ]
   }
  ],
  "metadata": {
